--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link
+      rel="apple-touch-icon"
+      href="/src/assets/favicon-ios.png"
+      sizes="180x180"
+    />
+    <link
+      rel="mask-icon"
+      href="/src/assets/favicon-safari.svg"
+      color="#D95E40"
+    />
 
-  <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-  <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
-  <link rel="apple-touch-icon" href="/src/assets/favicon-ios.png" sizes="180x180" />
-  <link rel="mask-icon" href="/src/assets/favicon-safari.svg" color="#D95E40" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&family=M+PLUS+2:wght@100..900&family=Noto+Sans+KR:wght@400..800&family=Noto+Sans+JP:wght@400..800&family=Asap:wght@400..700&family=M+PLUS+Rounded+1c:wght@800&family=Jua&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&family=M+PLUS+2:wght@100..900&family=Noto+Sans+KR:wght@400..800&family=Noto+Sans+JP:wght@400..800&family=Asap:wght@400..700&family=M+PLUS+Rounded+1c:wght@800&family=Jua&display=swap"
-    rel="stylesheet" />
+    <meta name="msapplication-TileColor" content="#402f3f" />
+    <meta name="theme-color" content="#332532" />
 
-  <meta name="msapplication-TileColor" content="#402f3f" />
-  <meta name="theme-color" content="#332532" />
+    <link href="src/styles/index.css" rel="stylesheet" />
 
-  <title>Kitsu Anime Awards</title>
-</head>
+    <title>Kitsu Anime Awards</title>
+  </head>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
