Make favicon work

--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
     <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
     <link
       rel="apple-touch-icon"
-      href="/src/assets/favicon-ios.png"
+      href="/src/assets/favicon.png"
       sizes="180x180"
-    />
-    <link
-      rel="mask-icon"
-      href="/src/assets/favicon-safari.svg"
-      color="#D95E40"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,8 +20,8 @@
       rel="stylesheet"
     />
 
-    <meta name="msapplication-TileColor" content="#402f3f" />
-    <meta name="theme-color" content="#332532" />
+    <meta name="msapplication-TileColor" content="#161116" />
+    <meta name="theme-color" content="#161116" />
 
     <link href="src/styles/index.css" rel="stylesheet" />
 
