--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <!-- Favicon -->
         <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
         <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
         <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
@@ -13,6 +14,33 @@
             sizes="180x180"
         />
 
+        <!-- Social Media Cards -->
+        <!-- Open Graph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="The Kitsu Anime Awards" />
+        <meta property="og:site_name" content="KitsuAwards" />
+        <meta
+            property="og:description"
+            content="Vote for your favourite anime of the year!"
+        />
+        <meta property="og:url" content="https://kitsuawards.com/" />
+        <meta property="og:image" content="/src/assets/favicon.png" />
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:width" content="192" />
+        <meta property="og:image:height" content="192" />
+        <meta property="og:image:alt" content="kitsu logo" />
+
+        <!-- Twitter Cards -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:title" content="The Kitsu Anime Awards" />
+        <meta
+            name="twitter:description"
+            content="Vote for your favourite anime of the year!"
+        />
+        <meta name="twitter:image" content="/src/assets/favicon.png" />
+        <meta name="twitter:alt" content="kitsu logo" />
+
+        <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
